- Fixed footer alignment

--- a/src/core/layout/Layout.scss
+++ b/src/core/layout/Layout.scss
@@ -1,4 +1,5 @@
 .layout {
     align-items: normal !important;
     height: 100vh;
+    justify-content: space-between;
 }
